--- a/style.css
+++ b/style.css
@@ -47,6 +47,18 @@ nav ul li a {
     border-radius: 10px;
 }
 
+.btn {
+    background-color: #606C38;
+    color: #FEFAE0;
+    padding: 8px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.btn:hover {
+    background-color: #283618;
+}
+
 .features {
     text-align: center;
     padding: 30px;
