--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ nav ul li a {
     background-color: #606C38;
     color: #FEFAE0;
     padding: 8px 20px;
+    border-radius: 3px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
