--- a/style.css
+++ b/style.css
@@ -1,111 +1,36 @@
-
 body {
-    font-family: Arial, Lorry;
     margin: 0;
-    padding: 0;
-    background-color: #FEFAE0;
-    color: #283618;
-}
-
-header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #c2905e;
-    color: #FEFAE0;
-    padding: 15px;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-}
-
-nav ul li {
-    margin: 0 15px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #FEFAE0;
-}
-
-.hero {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 50px;
-    background-color: #e3c6a7;
-}
-
-.hero-text {
-    max-width: 50%;
-}
-
-.hero-image img {
-    width: 300px;
-    border-radius: 10px;
-}
-
-.btn {
-    background-color: #606C38;
-    color: #FEFAE0;
-    padding: 8px 20px;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.btn:hover {
-    background-color: #283618;
-}
-
-.features {
-    text-align: center;
-    padding: 30px;
-}
-
-.testimonials {
-    background-color: #FEFAE0;
-    padding: 20px;
-}
-
-.testimonial-box {
-    background: #FEFAE0;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 5px;
-}
-
-.types {
-    display: flex;
+    height: 100vh;
     justify-content: center;
-    padding: 30px;
-}
-
-.type-box {
-    background: #d8a06f;
-    padding: 20px;
-    margin: 10px;
-    border-radius: 5px;
-    color: #FEFAE0;
-    
-}
-
-.faq {
-    padding: 30px;
-}
-
-details {
-    margin-bottom: 10px;
-}
-
-footer {
-    background: #c2905e;
-    color: #FEFAE0;
-    text-decoration-color: #FEFAE0;
-    text-align: center;
-    padding: 15px;
-}
-
+    align-items: center;
+    background: white;
+  }
+  
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: repeat(4, 100px);
+    gap: 5px;
+    border: 5px solid black;
+    padding: 5px;
+    background: black;
+  }
+  
+  .cell {
+    background: white;
+    border: 2px solid black;
+  }
+  
+  .yellow {
+    background-color: #f2cb05;
+  }
+  
+  .red {
+    background-color: #c0291a;
+  }
+  
+  .blue {
+    background-color: #223c7b;
+  }
   
