--- a/stylesM.css
+++ b/stylesM.css
@@ -47,6 +47,8 @@ h2 {
     font-size: clamp(18px, 3vw, 24px);
     font-weight: bold;
     margin-bottom: 20px;
+    margin-top: 20px;
+    padding: auto;
     text-decoration: none;
     animation: fadeInUp 1s ease-out;
 }
@@ -64,6 +66,7 @@ p {
     font-size: clamp(14px, 2vw, 16px);
     text-decoration: none;
 }
+
 
 header {
     background-color: #D0975D;
@@ -141,6 +144,9 @@ nav ul li {
     text-decoration: none;
     width: 100%;
     text-align: center;
+    line-height: 1.6;
+    margin-bottom: 15px;
+    
 }
 
 nav ul li a {
@@ -255,11 +261,12 @@ nav ul li a:hover {
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    line-height: 1.5;
 }
 
 .how-it-works-content2 {
     width: 80%;
-    max-width: 400px;
+    max-width: 1000px;
     animation: fadeInLeft 1s ease-out;
     order: 2;
 }
